AWS/CloudFormation/Project-001-Roman-Numerals-Converter/Roman_Number.yml
AWSTemplateFormatVersion: 2010-09-09

Description: This template launches an instance deploys Flask methods and as a result shows you a website related with Roman Numbers.
  
Parameters:
  Key:
    Description: Select your key
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  HTTPSSHSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection. # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  
  RomanNumberInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-033b95fb8079dc481
      InstanceType: t2.micro
      KeyName: !Ref Key
      SecurityGroupIds:
        - !Ref HTTPSSHSecGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: !Base64 |
        #! /bin/bash
        yum update -y
        pip3 install flask
        wget https://raw.githubusercontent.com/yunusdlbs/My-projects/main/AWS/CloudFormation/Project-001-Roman-Numerals-Converter/Project_001_.png
        wget https://raw.githubusercontent.com/yunusdlbs/My-projects/main/AWS/CloudFormation/Project-001-Roman-Numerals-Converter/app.py
        wget https://raw.githubusercontent.com/yunusdlbs/My-projects/main/AWS/CloudFormation/Project-001-Roman-Numerals-Converter/project-001-snapshot.png
        mkdir templates && cd templates
        wget https://raw.githubusercontent.com/yunusdlbs/My-projects/main/AWS/CloudFormation/Project-001-Roman-Numerals-Converter/templates/index.html
        wget https://raw.githubusercontent.com/yunusdlbs/My-projects/main/AWS/CloudFormation/Project-001-Roman-Numerals-Converter/templates/result.html
        cd ..
        python3 app.py

Outputs:
  AppUrl:
    Description: URL of the RomanNumberInstance
    Value: !Join 
       - ''
       - - 'http://'
         - !GetAtt RomanNumberInstance.PublicIp
